--- a/style.css
+++ b/style.css
@@ -1,3 +1,100 @@
+/* 
+CSS config
+Any part of the CSS, whether it's mobile or desktop 
+could use this stuff
+ */
+* {
+    margin: 0;
+
+
+    --blue-lighter: #6f2dbd;    
+    --blue-light: #a663cc;
+    --blue: #b298dc;
+    --blue-dark: #b8d0eb;
+    --blue-darker: #b9faf8;
+
+    color: white;
+
+}
+
+
+
+/* 
+Mobile first styling!!!
+*/
+
 body {
-    background-color: bisque;
+    background-color: var(--blue-light);
+    display: flex;
+    flex-direction: column;
+    justify-content: baseline;
+    /* Textaligns is horizontal */
+    text-align: center;
+    /* Alignitems is vertical */
+    align-items: center;
+
+    height: 100dvh;
+    width: 100%;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.row {
+    width: 100%;
+    background-color: var(--blue-dark);
+}
+
+.column {
+    width: 100%;
+    background-color: var(--blue-lighter);
+
+    height: 50dvw;
+    margin-top: 1%;
+    margin-bottom: 1%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+header {
+    min-height: 7dvh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+footer {
+    min-height: 3dvh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-self: flex-end;
+    /* margin-top: auto; */
+}
+/* main element with a class of "row" */
+main.row {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 2;
+}
+
+/* Desktop styling goes here */
+
+@media screen and (min-width: 500px) {
+    body {
+        background-color: var(--blue-dark)
+    }
+
+    main.row {
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+    }
+    
+    .column {
+        width: 30dvw;
+        height: 50dvh;
+    }
 }
