--- a/style.css
+++ b/style.css
@@ -80,6 +80,40 @@ main.row {
     flex-grow: 2;
 }
 
+a:hover {
+    background-color: var(--blue-light);
+    animation: spin 1s infinite linear;
+}
+
+a:active {
+    animation: bounce 1s infinite linear;
+}
+
+h1:hover {
+    animation: bounce 1s infinite linear;
+    background-color: var(--blue-darker);
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+        color: var(--blue)
+    }
+
+    50% {
+        color: var(--blue-dark)
+    }
+
+    100% {
+        transform: rotate(360deg);
+        color: var(--blue-lighter);
+    }
+}
+
+
+
+
+
 /* Desktop styling goes here */
 
 @media screen and (min-width: 500px) {
